detect and push homematic api failures